compiler/snapshots/generic-call-within-generic-constant.wipple.snap
---
source: compiler/test.rs
expression: output
---
status: 0

stderr:
Compiling library/src/foundation... done
Compiling generic-call-within-generic-constant.wipple... done

stdout:
