compiler/snapshots/generic-instance.wipple.snap
---
source: compiler/test.rs
expression: output
---
status: 0

stderr:
Compiling library/src/foundation... done
Compiling generic-instance.wipple... done

stdout:
Hello, world!
