compiler/snapshots/generic-type.wipple.snap
---
source: compiler/test.rs
expression: output
---
status: 0

stderr:
Compiling library/src/foundation... done
Compiling generic-type.wipple... done

stdout:
Hello, world!
