compiler/snapshots/greet.wipple.snap
---
source: compiler/test.rs
expression: output
---
status: 0

stderr:
Compiling library/src/foundation... done
Compiling greet.wipple... done

stdout:
Hello, Bob!
Hello, world!
