compiler/snapshots/hello-world.wipple.snap
---
source: compiler/test.rs
expression: output
---
status: 0

stderr:
Compiling library/src/foundation... done
Compiling hello-world.wipple... done

stdout:
Hello, world!
