compiler/snapshots/infer-constraint.wipple.snap
---
source: compiler/test.rs
expression: output
---
status: 1

stderr:
Compiling infer-constraint.wipple... done
Error: compilation failed with 1 feedback item(s)

stdout:
Facts:
TypeDefinitionNode `Number` (compiler/tests/infer-constraint.wipple:1:1-3:26)
  at compiler/tests/infer-constraint.wipple:1:1-3:26
  has definition constraints
  has type Number
  is a definition
TypeDefinitionNode `String` (compiler/tests/infer-constraint.wipple:4:1-4:26)
  at compiler/tests/infer-constraint.wipple:4:1-4:26
  has definition constraints
  has type String
  is a definition
TypeParameterNode `left` (compiler/tests/infer-constraint.wipple:6:7-6:11)
  at compiler/tests/infer-constraint.wipple:6:7-6:11
  has type left
  is a type
  resolved to 1 definition(s): `left` (compiler/tests/infer-constraint.wipple:6:7-6:11)
TypeParameterNode `right` (compiler/tests/infer-constraint.wipple:6:12-6:17)
  at compiler/tests/infer-constraint.wipple:6:12-6:17
  has type right
  is a type
  resolved to 1 definition(s): `right` (compiler/tests/infer-constraint.wipple:6:12-6:17)
TypeParameterNode `sum` (compiler/tests/infer-constraint.wipple:6:18-6:21)
  at compiler/tests/infer-constraint.wipple:6:18-6:21
  has type sum
  is a type
  resolved to 1 definition(s): `sum` (compiler/tests/infer-constraint.wipple:6:18-6:21)
TypeParameterNode `left` (compiler/tests/infer-constraint.wipple:6:32-6:36)
  at compiler/tests/infer-constraint.wipple:6:32-6:36
  has type left
  is a type
  resolved to 1 definition(s): `left` (compiler/tests/infer-constraint.wipple:6:7-6:11)
TypeParameterNode `right` (compiler/tests/infer-constraint.wipple:6:37-6:42)
  at compiler/tests/infer-constraint.wipple:6:37-6:42
  has type right
  is a type
  resolved to 1 definition(s): `right` (compiler/tests/infer-constraint.wipple:6:12-6:17)
TypeParameterNode `sum` (compiler/tests/infer-constraint.wipple:6:46-6:49)
  at compiler/tests/infer-constraint.wipple:6:46-6:49
  has type sum
  is a type
  resolved to 1 definition(s): `sum` (compiler/tests/infer-constraint.wipple:6:18-6:21)
FunctionTypeNode `left right -> sum` (compiler/tests/infer-constraint.wipple:6:32-6:49)
  at compiler/tests/infer-constraint.wipple:6:32-6:49
  has type left right -> sum
  is a type
TraitDefinitionNode `Add : left right sum => trait (left right -> sum)` (compiler/tests/infer-constraint.wipple:6:1-6:50)
  at compiler/tests/infer-constraint.wipple:6:1-6:50
  has definition constraints
  has instances
  has type left right -> sum
  has type parameters
  is a definition
NamedTypeNode `Number` (compiler/tests/infer-constraint.wipple:7:15-7:21)
  at compiler/tests/infer-constraint.wipple:7:15-7:21
  has type Number
  is a type
  resolved to 1 definition(s): `Number` (compiler/tests/infer-constraint.wipple:1:1-3:26)
NamedTypeNode `Number` (compiler/tests/infer-constraint.wipple:7:22-7:28)
  at compiler/tests/infer-constraint.wipple:7:22-7:28
  has type Number
  is a type
  resolved to 1 definition(s): `Number` (compiler/tests/infer-constraint.wipple:1:1-3:26)
NamedTypeNode `Number` (compiler/tests/infer-constraint.wipple:7:29-7:35)
  at compiler/tests/infer-constraint.wipple:7:29-7:35
  has type Number
  is a type
  resolved to 1 definition(s): `Number` (compiler/tests/infer-constraint.wipple:1:1-3:26)
BoundConstraintNode `Add Number Number Number` (compiler/tests/infer-constraint.wipple:7:10-7:36)
  at compiler/tests/infer-constraint.wipple:7:10-7:36
PlaceholderExpressionNode `_` (compiler/tests/infer-constraint.wipple:7:39-7:40)
  at compiler/tests/infer-constraint.wipple:7:39-7:40
  has type Number Number -> Number
  is an expression
InstanceDefinitionNode `instance (Add Number Number Number)` (compiler/tests/infer-constraint.wipple:7:1-7:40)
  at compiler/tests/infer-constraint.wipple:7:1-7:40
  has definition constraints
  has type Number Number -> Number
  is a definition
  resolved to 1 definition(s): `Add : left right sum => trait (left right -> sum)` (compiler/tests/infer-constraint.wipple:6:1-6:50)
NamedTypeNode `String` (compiler/tests/infer-constraint.wipple:8:15-8:21)
  at compiler/tests/infer-constraint.wipple:8:15-8:21
  has type String
  is a type
  resolved to 1 definition(s): `String` (compiler/tests/infer-constraint.wipple:4:1-4:26)
NamedTypeNode `String` (compiler/tests/infer-constraint.wipple:8:22-8:28)
  at compiler/tests/infer-constraint.wipple:8:22-8:28
  has type String
  is a type
  resolved to 1 definition(s): `String` (compiler/tests/infer-constraint.wipple:4:1-4:26)
NamedTypeNode `String` (compiler/tests/infer-constraint.wipple:8:29-8:35)
  at compiler/tests/infer-constraint.wipple:8:29-8:35
  has type String
  is a type
  resolved to 1 definition(s): `String` (compiler/tests/infer-constraint.wipple:4:1-4:26)
BoundConstraintNode `Add String String String` (compiler/tests/infer-constraint.wipple:8:10-8:36)
  at compiler/tests/infer-constraint.wipple:8:10-8:36
PlaceholderExpressionNode `_` (compiler/tests/infer-constraint.wipple:8:39-8:40)
  at compiler/tests/infer-constraint.wipple:8:39-8:40
  has type String String -> String
  is an expression
InstanceDefinitionNode `instance (Add String String String)` (compiler/tests/infer-constraint.wipple:8:1-8:40)
  at compiler/tests/infer-constraint.wipple:8:1-8:40
  has definition constraints
  has type String String -> String
  is a definition
  resolved to 1 definition(s): `Add : left right sum => trait (left right -> sum)` (compiler/tests/infer-constraint.wipple:6:1-6:50)
TypeParameterNode `left` (compiler/tests/infer-constraint.wipple:10:8-10:12)
  at compiler/tests/infer-constraint.wipple:10:8-10:12
  has type left
  is a type
  resolved to 1 definition(s): `left` (compiler/tests/infer-constraint.wipple:10:8-10:12)
TypeParameterNode `right` (compiler/tests/infer-constraint.wipple:10:13-10:18)
  at compiler/tests/infer-constraint.wipple:10:13-10:18
  has type right
  is a type
  resolved to 1 definition(s): `right` (compiler/tests/infer-constraint.wipple:10:13-10:18)
TypeParameterNode `sum` (compiler/tests/infer-constraint.wipple:10:22-10:25)
  at compiler/tests/infer-constraint.wipple:10:22-10:25
  has type sum
  is a type
  resolved to 1 definition(s): `sum` (compiler/tests/infer-constraint.wipple:10:22-10:25)
FunctionTypeNode `left right -> sum` (compiler/tests/infer-constraint.wipple:10:8-10:25)
  at compiler/tests/infer-constraint.wipple:10:8-10:25
  has type left right -> sum
  is a type
TypeParameterNode `left` (compiler/tests/infer-constraint.wipple:10:37-10:41)
  at compiler/tests/infer-constraint.wipple:10:37-10:41
  has type left
  is a type
  resolved to 1 definition(s): `left` (compiler/tests/infer-constraint.wipple:10:8-10:12)
TypeParameterNode `right` (compiler/tests/infer-constraint.wipple:10:42-10:47)
  at compiler/tests/infer-constraint.wipple:10:42-10:47
  has type right
  is a type
  resolved to 1 definition(s): `right` (compiler/tests/infer-constraint.wipple:10:13-10:18)
TypeParameterNode `sum` (compiler/tests/infer-constraint.wipple:10:48-10:51)
  at compiler/tests/infer-constraint.wipple:10:48-10:51
  has type sum
  is a type
  resolved to 1 definition(s): `sum` (compiler/tests/infer-constraint.wipple:10:22-10:25)
BoundConstraintNode `Add left right sum` (compiler/tests/infer-constraint.wipple:10:32-10:52)
  at compiler/tests/infer-constraint.wipple:10:32-10:52
  is a constraint
  resolved to 1 definition(s): `Add : left right sum => trait (left right -> sum)` (compiler/tests/infer-constraint.wipple:6:1-6:50)
ConstantDefinitionNode `add` (compiler/tests/infer-constraint.wipple:10:1-10:52)
  at compiler/tests/infer-constraint.wipple:10:1-10:52
  has definition constraints
  has type left right -> sum
  has type parameters
  is a definition
VariablePatternNode `add` (compiler/tests/infer-constraint.wipple:11:1-11:4)
  at compiler/tests/infer-constraint.wipple:11:1-11:4
PlaceholderExpressionNode `_` (compiler/tests/infer-constraint.wipple:11:7-11:8)
  at compiler/tests/infer-constraint.wipple:11:7-11:8
  has type left right -> sum
  is an expression
WildcardPatternNode `_` (compiler/tests/infer-constraint.wipple:13:1-13:2)
  at compiler/tests/infer-constraint.wipple:13:1-13:2
  has type String
  is a pattern
VariableExpressionNode `add` (compiler/tests/infer-constraint.wipple:13:6-13:9)
  at compiler/tests/infer-constraint.wipple:13:6-13:9
  has bound(s) Add Number Number String (unresolved)
  has type Number Number -> String
  is an expression
  resolved to 1 definition(s): `add` (compiler/tests/infer-constraint.wipple:10:1-10:52)
NumberExpressionNode `1` (compiler/tests/infer-constraint.wipple:13:10-13:11)
  at compiler/tests/infer-constraint.wipple:13:10-13:11
  has type Number
  is an expression
NumberExpressionNode `2` (compiler/tests/infer-constraint.wipple:13:12-13:13)
  at compiler/tests/infer-constraint.wipple:13:12-13:13
  has type Number
  is an expression
CallExpressionNode `add 1 2` (compiler/tests/infer-constraint.wipple:13:6-13:13)
  at compiler/tests/infer-constraint.wipple:13:6-13:13
  has type String
  is an expression
NamedTypeNode `String` (compiler/tests/infer-constraint.wipple:13:17-13:23)
  at compiler/tests/infer-constraint.wipple:13:17-13:23
  has type String
  is a type
  resolved to 1 definition(s): `String` (compiler/tests/infer-constraint.wipple:4:1-4:26)
AnnotateExpressionNode `add 1 2 :: String` (compiler/tests/infer-constraint.wipple:13:6-13:23)
  at compiler/tests/infer-constraint.wipple:13:6-13:23
  has type String
  is an expression
TypeParameterNode `left` (compiler/tests/infer-constraint.wipple:15:13-15:17)
  at compiler/tests/infer-constraint.wipple:15:13-15:17
  has type left
  is a type
  resolved to 1 definition(s): `left` (compiler/tests/infer-constraint.wipple:15:13-15:17)
TypeParameterNode `right` (compiler/tests/infer-constraint.wipple:15:18-15:23)
  at compiler/tests/infer-constraint.wipple:15:18-15:23
  has type right
  is a type
  resolved to 1 definition(s): `right` (compiler/tests/infer-constraint.wipple:15:18-15:23)
TypeParameterNode `infer sum` (compiler/tests/infer-constraint.wipple:15:24-15:35)
  at compiler/tests/infer-constraint.wipple:15:24-15:35
  has type sum
  is a type
  is inferred type parameter
  resolved to 1 definition(s): `infer sum` (compiler/tests/infer-constraint.wipple:15:24-15:35)
TypeParameterNode `left` (compiler/tests/infer-constraint.wipple:15:46-15:50)
  at compiler/tests/infer-constraint.wipple:15:46-15:50
  has type left
  is a type
  resolved to 1 definition(s): `left` (compiler/tests/infer-constraint.wipple:15:13-15:17)
TypeParameterNode `right` (compiler/tests/infer-constraint.wipple:15:51-15:56)
  at compiler/tests/infer-constraint.wipple:15:51-15:56
  has type right
  is a type
  resolved to 1 definition(s): `right` (compiler/tests/infer-constraint.wipple:15:18-15:23)
TypeParameterNode `sum` (compiler/tests/infer-constraint.wipple:15:60-15:63)
  at compiler/tests/infer-constraint.wipple:15:60-15:63
  has type sum
  is a type
  resolved to 1 definition(s): `infer sum` (compiler/tests/infer-constraint.wipple:15:24-15:35)
FunctionTypeNode `left right -> sum` (compiler/tests/infer-constraint.wipple:15:46-15:63)
  at compiler/tests/infer-constraint.wipple:15:46-15:63
  has type left right -> sum
  is a type
TraitDefinitionNode `Add-Infer : left right (infer sum) => trait (left right -> sum)` (compiler/tests/infer-constraint.wipple:15:1-15:64)
  at compiler/tests/infer-constraint.wipple:15:1-15:64
  has definition constraints
  has instances
  has type left right -> sum
  has type parameters
  is a definition
NamedTypeNode `Number` (compiler/tests/infer-constraint.wipple:16:21-16:27)
  at compiler/tests/infer-constraint.wipple:16:21-16:27
  has type Number
  is a type
  resolved to 1 definition(s): `Number` (compiler/tests/infer-constraint.wipple:1:1-3:26)
NamedTypeNode `Number` (compiler/tests/infer-constraint.wipple:16:28-16:34)
  at compiler/tests/infer-constraint.wipple:16:28-16:34
  has type Number
  is a type
  resolved to 1 definition(s): `Number` (compiler/tests/infer-constraint.wipple:1:1-3:26)
NamedTypeNode `Number` (compiler/tests/infer-constraint.wipple:16:35-16:41)
  at compiler/tests/infer-constraint.wipple:16:35-16:41
  has type Number
  is a type
  resolved to 1 definition(s): `Number` (compiler/tests/infer-constraint.wipple:1:1-3:26)
BoundConstraintNode `Add-Infer Number Number Number` (compiler/tests/infer-constraint.wipple:16:10-16:42)
  at compiler/tests/infer-constraint.wipple:16:10-16:42
PlaceholderExpressionNode `_` (compiler/tests/infer-constraint.wipple:16:45-16:46)
  at compiler/tests/infer-constraint.wipple:16:45-16:46
  has type Number Number -> Number
  is an expression
InstanceDefinitionNode `instance (Add-Infer Number Number Number)` (compiler/tests/infer-constraint.wipple:16:1-16:46)
  at compiler/tests/infer-constraint.wipple:16:1-16:46
  has definition constraints
  has type Number Number -> Number
  is a definition
  resolved to 1 definition(s): `Add-Infer : left right (infer sum) => trait (left right -> sum)` (compiler/tests/infer-constraint.wipple:15:1-15:64)
NamedTypeNode `String` (compiler/tests/infer-constraint.wipple:17:21-17:27)
  at compiler/tests/infer-constraint.wipple:17:21-17:27
  has type String
  is a type
  resolved to 1 definition(s): `String` (compiler/tests/infer-constraint.wipple:4:1-4:26)
NamedTypeNode `String` (compiler/tests/infer-constraint.wipple:17:28-17:34)
  at compiler/tests/infer-constraint.wipple:17:28-17:34
  has type String
  is a type
  resolved to 1 definition(s): `String` (compiler/tests/infer-constraint.wipple:4:1-4:26)
NamedTypeNode `String` (compiler/tests/infer-constraint.wipple:17:35-17:41)
  at compiler/tests/infer-constraint.wipple:17:35-17:41
  has type String
  is a type
  resolved to 1 definition(s): `String` (compiler/tests/infer-constraint.wipple:4:1-4:26)
BoundConstraintNode `Add-Infer String String String` (compiler/tests/infer-constraint.wipple:17:10-17:42)
  at compiler/tests/infer-constraint.wipple:17:10-17:42
PlaceholderExpressionNode `_` (compiler/tests/infer-constraint.wipple:17:45-17:46)
  at compiler/tests/infer-constraint.wipple:17:45-17:46
  has type String String -> String
  is an expression
InstanceDefinitionNode `instance (Add-Infer String String String)` (compiler/tests/infer-constraint.wipple:17:1-17:46)
  at compiler/tests/infer-constraint.wipple:17:1-17:46
  has definition constraints
  has type String String -> String
  is a definition
  resolved to 1 definition(s): `Add-Infer : left right (infer sum) => trait (left right -> sum)` (compiler/tests/infer-constraint.wipple:15:1-15:64)
TypeParameterNode `left` (compiler/tests/infer-constraint.wipple:19:14-19:18)
  at compiler/tests/infer-constraint.wipple:19:14-19:18
  has type left
  is a type
  resolved to 1 definition(s): `left` (compiler/tests/infer-constraint.wipple:19:14-19:18)
TypeParameterNode `right` (compiler/tests/infer-constraint.wipple:19:19-19:24)
  at compiler/tests/infer-constraint.wipple:19:19-19:24
  has type right
  is a type
  resolved to 1 definition(s): `right` (compiler/tests/infer-constraint.wipple:19:19-19:24)
TypeParameterNode `sum` (compiler/tests/infer-constraint.wipple:19:28-19:31)
  at compiler/tests/infer-constraint.wipple:19:28-19:31
  has type sum
  is a type
  resolved to 1 definition(s): `sum` (compiler/tests/infer-constraint.wipple:19:28-19:31)
FunctionTypeNode `left right -> sum` (compiler/tests/infer-constraint.wipple:19:14-19:31)
  at compiler/tests/infer-constraint.wipple:19:14-19:31
  has type left right -> sum
  is a type
TypeParameterNode `left` (compiler/tests/infer-constraint.wipple:19:49-19:53)
  at compiler/tests/infer-constraint.wipple:19:49-19:53
  has type left
  is a type
  resolved to 1 definition(s): `left` (compiler/tests/infer-constraint.wipple:19:14-19:18)
TypeParameterNode `right` (compiler/tests/infer-constraint.wipple:19:54-19:59)
  at compiler/tests/infer-constraint.wipple:19:54-19:59
  has type right
  is a type
  resolved to 1 definition(s): `right` (compiler/tests/infer-constraint.wipple:19:19-19:24)
TypeParameterNode `sum` (compiler/tests/infer-constraint.wipple:19:60-19:63)
  at compiler/tests/infer-constraint.wipple:19:60-19:63
  has type sum
  is a type
  resolved to 1 definition(s): `sum` (compiler/tests/infer-constraint.wipple:19:28-19:31)
BoundConstraintNode `Add-Infer left right sum` (compiler/tests/infer-constraint.wipple:19:38-19:64)
  at compiler/tests/infer-constraint.wipple:19:38-19:64
  is a constraint
  resolved to 1 definition(s): `Add-Infer : left right (infer sum) => trait (left right -> sum)` (compiler/tests/infer-constraint.wipple:15:1-15:64)
ConstantDefinitionNode `add-infer` (compiler/tests/infer-constraint.wipple:19:1-19:64)
  at compiler/tests/infer-constraint.wipple:19:1-19:64
  has definition constraints
  has type left right -> sum
  has type parameters
  is a definition
VariablePatternNode `add-infer` (compiler/tests/infer-constraint.wipple:20:1-20:10)
  at compiler/tests/infer-constraint.wipple:20:1-20:10
PlaceholderExpressionNode `_` (compiler/tests/infer-constraint.wipple:20:13-20:14)
  at compiler/tests/infer-constraint.wipple:20:13-20:14
  has type left right -> sum
  is an expression
VariablePatternNode `output` (compiler/tests/infer-constraint.wipple:22:1-22:7)
  at compiler/tests/infer-constraint.wipple:22:1-22:7
  has type Number or String
  is a pattern
VariableExpressionNode `add-infer` (compiler/tests/infer-constraint.wipple:22:11-22:20)
  at compiler/tests/infer-constraint.wipple:22:11-22:20
  has bound(s) Add-Infer Number Number Number (`instance (Add-Infer Number Number Number)` (compiler/tests/infer-constraint.wipple:16:1-16:46))
  has type Number Number -> Number
  is an expression
  resolved to 1 definition(s): `add-infer` (compiler/tests/infer-constraint.wipple:19:1-19:64)
NumberExpressionNode `1` (compiler/tests/infer-constraint.wipple:22:21-22:22)
  at compiler/tests/infer-constraint.wipple:22:21-22:22
  has type Number
  is an expression
NumberExpressionNode `2` (compiler/tests/infer-constraint.wipple:22:23-22:24)
  at compiler/tests/infer-constraint.wipple:22:23-22:24
  has type Number
  is an expression
CallExpressionNode `add-infer 1 2` (compiler/tests/infer-constraint.wipple:22:11-22:24)
  at compiler/tests/infer-constraint.wipple:22:11-22:24
  has type Number or String
  is an expression
NamedTypeNode `String` (compiler/tests/infer-constraint.wipple:22:28-22:34)
  at compiler/tests/infer-constraint.wipple:22:28-22:34
  has type Number or String
  is a type
  resolved to 1 definition(s): `String` (compiler/tests/infer-constraint.wipple:4:1-4:26)
AnnotateExpressionNode `add-infer 1 2 :: String` (compiler/tests/infer-constraint.wipple:22:11-22:34)
  at compiler/tests/infer-constraint.wipple:22:11-22:34
  has type Number or String
  is an expression


Feedback:

`output` (compiler/tests/infer-constraint.wipple:22:1-22:7) (conflicting-types):

  `output` (compiler/tests/infer-constraint.wipple:22:1-22:7) is a `Number` (compiler/tests/infer-constraint.wipple:16:35-16:41) or a `String` (compiler/tests/infer-constraint.wipple:22:28-22:34), but it can only be one of these.

  `output` (compiler/tests/infer-constraint.wipple:22:1-22:7) must be the same type as `add-infer 1 2` (compiler/tests/infer-constraint.wipple:22:11-22:24), `add-infer 1 2 :: String` (compiler/tests/infer-constraint.wipple:22:11-22:34), `String` (compiler/tests/infer-constraint.wipple:22:28-22:34), and 7 others; double-check these.

  -  `sum` (compiler/tests/infer-constraint.wipple:19:28-19:31) must have the same type everywhere in this use of `add-infer` (compiler/tests/infer-constraint.wipple:19:1-19:64).
