compiler/snapshots/infer.wipple.snap
---
source: compiler/test.rs
expression: output
---
status: 0

stderr:
Compiling library/src/foundation... done
Compiling infer.wipple... done

stdout:
C
Java
