compiler/snapshots/is.wipple.snap
---
source: compiler/test.rs
expression: output
---
status: 0

stderr:
Compiling library/src/foundation... done
Compiling is.wipple... done

stdout:
True
False
