compiler/snapshots/linked-list.wipple.snap
---
source: compiler/test.rs
expression: output
---
status: 0

stderr:
Compiling library/src/foundation... done
Compiling linked-list.wipple... done

stdout:
6
