compiler/snapshots/lists.wipple.snap
---
source: compiler/test.rs
expression: output
---
status: 0

stderr:
Compiling library/src/foundation... done
Compiling lists.wipple... done

stdout:
Some 1
Some 3
Some 2
Some 2
Some 2
